updating [more information] links

--- a/app/views/static_pages/_ftic.html.erb
+++ b/app/views/static_pages/_ftic.html.erb
@@ -95,7 +95,7 @@ Hello, <%= session[:cas_user] %>!
 					
 					<a name="raptors"></a>
 
-					<p>Lorem ipsum dolor sit amet, lacus nulla diamlorem, mi mauris non vel, nonummy habitant. Vel sollicitudin pede tempus magna id. Interdum sodales quam tempor vel, massa ut, hendrerit massa integer fusce vitae, ut ad. <a href="#divForm" class="lightbox" id="btnForm">[More Information]</a></p>
+					<p>Lorem ipsum dolor sit amet, lacus nulla diamlorem, mi mauris non vel, nonummy habitant. Vel sollicitudin pede tempus magna id. Interdum sodales quam tempor vel, massa ut, hendrerit massa integer fusce vitae, ut ad. <a title="Welcome to FAU!" href="#divForm" class="lightbox" id="btnForm">[More Information]</a></p>
 
 					<!-- <p>
 						<a href="#divForm" class="gallery-images" id="btnForm">[More Information]</a>
@@ -156,7 +156,7 @@ Hello, <%= session[:cas_user] %>!
 				  		<p>The non-refundable admissions tuition deposit is for admitted freshman students only.</p>
 				 		 
 				 		<p>All admitted freshmen must confirm their intention to enroll and secure their space in the class with a $200.00 <strong>non-refundable</strong> deposit. The $200 is applied to your tuition and fees for the semester in which you are admitted to FAU. It will be forfeited if you pay the deposit and choose not to enroll at FAU for that term, or if you submit a change of entry request for a different term. Your space will be released to another applicant if the deposit is not received by<span style="text-decoration: underline;"> May 1 or within two weeks of admission if admitted after May 1 <sup>st</sup></span>.
-                         <br><br>The deposit is applied to your account when you enroll and will be used toward your tuition and fees. It will be forfeited if you do not enroll.</p>
+                         <br><br>The deposit is applied to your account when you enroll and will be used toward your tuition and fees. It will be forfeited if you do not enroll. <a title="FAU Admissions Deposit" href="http://www.fau.edu/finaid" target="_blank">[More Information]</a></p>
 				 		
 
 				 		<div class="alert alert-border alert-danger text-center fade in alert-dismissable">
@@ -256,7 +256,7 @@ Hello, <%= session[:cas_user] %>!
 				  		 <p>The FAUNet ID is the account name you will use to login to many of the systems you will utilize in your daily life at Florida Atlantic University. It is a part of your official FAU e-mail address (e.g., FAUNetID@fau.edu). All students, faculty and staff are automatically granted a FAUNet ID and may claim their account by logging into the MyFAU portal. While many online services provided by the University require a separate password, OIT is working to synchronize these passwords while striving to improve the security of the system.</p>
 
 				  		 <p>
-				  		 	<a href="#" id="claimAccountBut">Start claiming your account</a>
+				  		 	<a title="FAU Account Claiming"href="#" id="claimAccountBut">Start claiming your account</a>
 				  		 </p>
 				  		<!-- 
 				  		<div class="buttons-box clearfix">
@@ -404,7 +404,7 @@ Hello, <%= session[:cas_user] %>!
 			  		
 		  		<h3 class="title">Immunization Policy</h3>
 
-		  		<p>To comply with Florida Board of Governors Regulations, prior to registration, all students must submit a signed FAU Immunization Form and documented proof of immunizations to measles and rubella. In addition, all students must provide documentation of vaccinations against meningococcal meningitis and hepatitis B or provide a signed waiver for each declined vaccination. Students will not be allowed to register for classes until all documentation has been approved by the Student Health Services Immunization Office. For more information or to download the immunization form visit www.fau.edu/shs &nbsp;<a href="http://www.fau.edu/shs/additional/immunization.php" target="_blank">[More Information]</a></p>
+		  		<p>To comply with Florida Board of Governors Regulations, prior to registration, all students must submit a signed FAU Immunization Form and documented proof of immunizations to measles and rubella. In addition, all students must provide documentation of vaccinations against meningococcal meningitis and hepatitis B or provide a signed waiver for each declined vaccination. Students will not be allowed to register for classes until all documentation has been approved by the Student Health Services Immunization Office. For more information or to download the immunization form visit www.fau.edu/shs &nbsp;<a title="FAU Immunization Guidelines" href="http://www.fau.edu/shs/info_forms/immunizations.php" target="_blank">[More Information]</a></p>
 
 		  		<!-- <p>
 		  			
@@ -464,7 +464,10 @@ Hello, <%= session[:cas_user] %>!
 
 					  		<h3 class="title">Your Financial Aid Documents</h3>
 
-					  		<p>To apply for financial aid, complete an online Free Application for Federal Student Aid at www.fafsa.ed.gov beginning January 1. The FAU priority deadline is March 1. Financial aid correspondence will be sent to your MyFAU email account. For more information, visit the financial aid website at www.fau.edu/finaid or call 561-297-3530.</p>
+					  		<p>To apply for financial aid, complete an online Free Application for Federal Student Aid at www.fafsa.ed.gov beginning January 1. The FAU priority deadline is March 1. Financial aid correspondence will be sent to your MyFAU email account. For more information, visit the financial aid website at www.fau.edu/finaid or call 561-297-3530.&nbsp;
+					  			<a title="FAU Financial Aid Information" href="http://www.fau.edu/finaid" target="_blank">[More Information]</a></p>
+
+					  		
 
 					  		<!-- <p>
 					  			<ul>								
@@ -518,7 +521,11 @@ Hello, <%= session[:cas_user] %>!
 
 		  		<p>Florida Residency for Tuition Purposes refers to whether you are an in-state Florida resident or an out-of-state resident, and this classification determines your tuition cost as defined by Florida state statute 1009.21 and the State Board of Education Rule 6A-10.044. Students are encouraged to review the following documents for additional information.<br> 
                      <br>All applicants must complete the Residency Classification for Tuition Purposes section of the application and submit the required documentation, regardless of the duration of their presence in Florida. A Florida resident for tuition purposes is defined as an individual who has resided in the state for 12 consecutive months while not enrolled in an institution of higher learning, prior to the beginning of classes, and who has established legal ties in Florida according to Florida Statute 1009.21.<br> 
-                     <br>Florida Legislature has recently implemented significant changes to Florida Statute 1009.21. For updated information, please visit <a title="Florida Legislature" href="http://www.flsenate.gov/data/session/2009/Senate/bills/amendments/pdf/sb1696c2588994.pdf" target="_blank">here</a>. Florida residency content can be found beginning on page 10.</p>
+                     <br>Florida Legislature has recently implemented significant changes to Florida Statute 1009.21. For updated information, please visit <a title="Florida Legislature" href="http://www.flsenate.gov/data/session/2009/Senate/bills/amendments/pdf/sb1696c2588994.pdf" target="_blank">here</a>. Florida residency content can be found beginning on page 10. 
+
+                    <a title="FAU Residency Guidelines" href="http://www.fau.edu/registrar/residency/index.php" target="_blank">[More Information]</a> 
+
+                 </p>
 
                     <div class="alert alert-border alert-danger text-center fade in alert-dismissable">
 						<button data-dismiss="alert" class="close" type="button">×</button>
@@ -564,7 +571,7 @@ Hello, <%= session[:cas_user] %>!
 			  		
 		  		<h3 class="title">On-Campus Housing</h3>
 
-		  		<p>Lorem ipsum Ad ullamco elit reprehenderit veniam aute minim dolore ullamco incididunt ea do. Lorem ipsum Reprehenderit do consectetur dolore do fugiat proident incididunt consequat minim ullamco. Lorem ipsum Proident laboris dolore in aliqua ut magna minim irure ut proident. Lorem ipsum Anim dolore incididunt aliquip do irure aute reprehenderit reprehenderit enim ut. Lorem ipsum Reprehenderit commodo anim laboris ex cupidatat dolor deserunt dolore exercitation Ut et culpa.</p>
+		  		<p>Lorem ipsum Ad ullamco elit reprehenderit veniam aute minim dolore ullamco incididunt ea do. Lorem ipsum Reprehenderit do consectetur dolore do fugiat proident incididunt consequat minim ullamco. Lorem ipsum Proident laboris dolore in aliqua ut magna minim irure ut proident. Lorem ipsum Anim dolore incididunt aliquip do irure aute reprehenderit reprehenderit enim ut. Lorem ipsum Reprehenderit commodo anim laboris ex cupidatat dolor deserunt dolore exercitation Ut et culpa.  <a title="FAU Housing" href="http://www.fau.edu/housing/" target="_blank">[More Information]</a> </p>
 
 			
 			  </div> 
@@ -607,7 +614,7 @@ Hello, <%= session[:cas_user] %>!
 			  <div class="step-content">			  		
 		  		<h3 class="title">ALEKS</h3>
 		  		<p>
-				FAU has adopted a mandatory placement exam to determine math proficiency known as ALEKS. All entering freshmen are required to take the ALEKS test. <a href="http://www.fau.edu/mathplacement" target="_blank">http://www.fau.edu/mathplacement</a>.
+				FAU has adopted a mandatory placement exam to determine math proficiency known as ALEKS. All entering freshmen are required to take the ALEKS test. <a title="ALEKS information" href="http://www.fau.edu/mathplacement" target="_blank">[More Information]</a>.
 				</p>
 
 
@@ -642,7 +649,7 @@ Hello, <%= session[:cas_user] %>!
 					"OARS" is a self-directed system. You may be a little nervous about choosing classes on your own, but DON'T WORRY! Help is always just a phone call or mouse click away, and the instructions are very user-friendly. When you log in to select your courses, you will find:
 						A brief description of the course when you click on the subject.
 						A sample class schedule for your major.
-						It takes three (3) to five (5) business days to process your submitted OARS form. After three to five business days, log back into OARS to review your advisor's comments. If your holds are cleared and your course selections are in sync with your advisors, you can log into MyFAU to register for classes. That's all there is to it!
+						It takes three (3) to five (5) business days to process your submitted OARS form. After three to five business days, log back into OARS to review your advisor's comments. If your holds are cleared and your course selections are in sync with your advisors, you can log into MyFAU to register for classes. That's all there is to it!  <a title="OARS information" href="http://www.fau.edu/uas/oars_welcome.php" target="_blank">[More Information]</a>
 				</p>	
 
 
@@ -679,7 +686,7 @@ Hello, <%= session[:cas_user] %>!
 			  <div class="step-content">			  		
 		  		<h3 class="title">Connect with other students</h3>
 				<p>
-					Learning Communities help you make a fast, smooth, and easy transition to FAU! Connect with 20-24 other students who share similar interests by taking the same classes together your freshman year. Learning Communities make it easier to meet people, make friends and form study groups while connecting you through shared experiences and themed activities. 
+					Learning Communities help you make a fast, smooth, and easy transition to FAU! Connect with 20-24 other students who share similar interests by taking the same classes together your freshman year. Learning Communities make it easier to meet people, make friends and form study groups while connecting you through shared experiences and themed activities. <a title="FAU Learning Commmunities" href="http://www.fau.edu/class/learning-community/" target="_blank">[More Information]</a>
 				</p>	
 
 				<p>
@@ -695,11 +702,7 @@ Hello, <%= session[:cas_user] %>!
 						    <li>Have fun!</li>
 						</ul>
 					</strong>
-				</p>
-
-				<p>
-					<a href="http://www.fau.edu/class/learning-community/flc/lcsoffered.php" target="_blank">[More Information]</a>
-				</p>
+				</p>			
 
 			  </div>			
 			</div>
@@ -721,7 +724,7 @@ Hello, <%= session[:cas_user] %>!
 			  <div class="step-content">			  		
 		  		<h3 class="title">New Student Orientation</h3>
 				<p>
-					Orientation is designed to make the transition to Florida Atlantic University as smooth as possible for you and your family members. The mandatory, two-day program promotes student development and accountability, and will provide you with information needed for a successful start to your academic career. Orientation is offered over the summer months for students enrolling in the summer and fall semesters, it is offered in November for students enrolling in the spring semester. Visit www.fau.edu/orientation
+					Orientation is designed to make the transition to Florida Atlantic University as smooth as possible for you and your family members. The mandatory, two-day program promotes student development and accountability, and will provide you with information needed for a successful start to your academic career. Orientation is offered over the summer months for students enrolling in the summer and fall semesters, it is offered in November for students enrolling in the spring semester. http://www.fau.edu/orientation/about/HowDoISignup.php
 				</p>	
 
 				<div class="alert alert-border alert-danger text-center fade in alert-dismissable">
@@ -734,7 +737,7 @@ Hello, <%= session[:cas_user] %>!
 				</div>
 
 				<p>
-					<a href="http://www.fau.edu/orientation/" target="_blank">[More Information]</a>
+					<a title="FAU Orientation" href="http://www.fau.edu/orientation/about/HowDoISignup.php" target="_blank">[More Information]</a>
 				</p>
 
 			  </div>			
@@ -796,7 +799,7 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 
 				
 				<p>
-					<a href="https://www.fau.edu/registrar/registration/" target="_blank">[More Information]</a>
+					<a href="http://www.fau.edu/uas/registration.php" target="_blank">[More Information]</a>
 				</p>
 
 			  </div>			
@@ -837,7 +840,9 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 			  <div class="step-content">			  		
 		  		<h3 class="title">FAU Alert and Notification System</h3>
 				<p>FAU Alert is the alert and notification system used to inform the University community of potential or actual emergency events or threats.&nbsp; It comprises of several tools including blast e-mails, text messages, call-out, outdoor warning sirens, and indoor notification systems. 
-               </a>.</p>
+               
+
+               <a title="FAU Alert" href="http://www.fau.edu/emergency/universityalerts.php" target="_blank">[More Information]</a>.</p>
 			  </div>			
 			</div>
 		  </li>
@@ -864,11 +869,7 @@ If you don't know the CRN, use the Class Search button to find them. When you ge
 				
 
 				<p>
-					To obtain your OWL Card, visit the <a href="http://www.fau.edu/business-services/owl-card/locations.php" target="_blank">OWL Card Center</a> on Florida Atlantic University's Boca Raton or Davie campus. Bring with you a photo ID, either your driver's license, military ID or passport. You must also be registered for classes within the current semester or have a current FAU employment contract or LLS membership card.
-				</p>
-
-				<p>
-					<a href="http://www.fau.edu/business-services/owl-card/request.php" target="_blank">[More Information]</a>
+					To obtain your OWL Card, visit the <a href="http://www.fau.edu/business-services/owl-card/locations.php" target="_blank">OWL Card Center</a> on Florida Atlantic University's Boca Raton or Davie campus. Bring with you a photo ID, either your driver's license, military ID or passport. You must also be registered for classes within the current semester or have a current FAU employment contract or LLS membership card. <a href="http://www.fau.edu/business-services/owl-card/request.php" target="_blank">[More Information]</a>
 				</p>
 			  </div>			
 			</div>
